--- a/scss/util/flexbox-grid.scss
+++ b/scss/util/flexbox-grid.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   display: flex;
   flex-flow: row wrap;
-  margin: 0 (-$gl-gutter/2);
+  //margin: 0 (-$gl-gutter/2);
 }
 .#{$gl-colName},
 [class*="#{$gl-colName}-"]{
